src/objects/Apttus_Config2__FavoriteConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Represent whether the favorite configuration is active. Inactive favorite configuration will not be shown on the catalog page.</description>
        <inlineHelpText>Represent whether the favorite configuration is active. Inactive favorite configuration will not be shown on the catalog page.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Product Configuration which contains line items of favorite configuration.</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Favorite Configurations</relationshipLabel>
        <relationshipName>FavoriteConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastUsedDate__c</fullName>
        <description>The date and time when the favorite config was last used</description>
        <inlineHelpText>The date and time when the favorite config was last used</inlineHelpText>
        <label>Last Used Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the price list associated with the configuration</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Favorite Configurations</relationshipLabel>
        <relationshipName>FavoriteConfigurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Scope__c</fullName>
        <description>Visibility scope of the favorite configuration</description>
        <inlineHelpText>Visibility scope of the favorite configuration</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Favorite Configuration</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Favorite Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>